@@ -1,3 +1,8 @@
+2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>
+
+	* src/hildon-pannable-area.c:
+	(hildon_pannable_area_motion_notify_cb): Fix a typo.
+
 2008-07-29  Alberto Garcia  <agarcia@igalia.com>
 
 	* examples/hildon-app-menu-example.c (main): Let the window
